# okn-ecs

./: CMakeLists.txt  README.md
include/okn/ecs/: api.hpp  component.hpp  config.hpp  ecs_export.hpp  ecs_types.hpp  entity.hpp  entity_id.hpp  physics_components.hpp  world.hpp  world_builder.hpp
include/okn/ecs/archetype/: archetype.hpp  chunk.hpp  chunk_allocator.hpp  chunk_view.hpp
include/okn/ecs/cli/: cli_commands.hpp
include/okn/ecs/events/: event_bus.hpp  event_queue.hpp
include/okn/ecs/hierarchy/: hierarchy.hpp  transform.hpp
include/okn/ecs/lifecycle/: lifecycle.hpp
include/okn/ecs/log/: log_hooks.hpp
include/okn/ecs/memory/: alloc_hooks.hpp  chunk_pools.hpp
include/okn/ecs/metrics/: debug_view.hpp  metrics.hpp
include/okn/ecs/profile/: profile_hooks.hpp
include/okn/ecs/query/: filter.hpp  query.hpp  relation.hpp  view.hpp
include/okn/ecs/reflection/: component_info.hpp  registry.hpp  system_info.hpp
include/okn/ecs/scheduler/: job_adapter.hpp  scheduler.hpp  system.hpp  system_graph.hpp  thread_pool_job_system.hpp
include/okn/ecs/scripting/: scripting_bridge.hpp
include/okn/ecs/serialization/: deserialize.hpp  entity_refs.hpp  serialize.hpp
include/okn/ecs/snapshot/: rollback.hpp  snapshot.hpp
include/okn/ecs/sparse/: sparse_set.hpp  sparse_storage.hpp
include/okn/ecs/storage/: storage.hpp  storage_registry.hpp
samples/: CMakeLists.txt  sample_basic.cpp  sample_hierarchy.cpp  sample_scheduler.cpp  sample_snapshot.cpp
src/: component.cpp  ecs_export.cpp  ecs_types.cpp  entity.cpp  entity_id.cpp  world.cpp  world_builder.cpp
src/archetype/: archetype.cpp  chunk.cpp  chunk_allocator.cpp  chunk_view.cpp
src/events/: event_bus.cpp  event_queue.cpp
src/hierarchy/: hierarchy.cpp  transform.cpp
src/lifecycle/: lifecycle.cpp
src/log/: log_hooks.cpp
src/memory/: chunk_pools.cpp
src/metrics/: debug_view.cpp  metrics.cpp
src/query/: filter.cpp  query.cpp  relation.cpp  view.cpp
src/reflection/: component_info.cpp  registry.cpp  system_info.cpp
src/scheduler/: job_adapter.cpp  scheduler.cpp  system.cpp  system_graph.cpp  thread_pool_job_system.cpp
src/scripting/: scripting_bridge.cpp
src/serialization/: deserialize.cpp  serialize.cpp
src/snapshot/: rollback.cpp  snapshot.cpp
src/sparse/: sparse_set.cpp  sparse_storage.cpp
src/storage/: storage.cpp  storage_registry.cpp
tests/: CMakeLists.txt  test_archetype.cpp  test_chunk.cpp  test_chunk_allocator.cpp  test_entity.cpp  test_events.cpp  test_hierarchy.cpp  test_query.cpp  test_scheduler.cpp  test_scripting.cpp  test_serialization.cpp  test_snapshot.cpp  test_sparse.cpp  test_sparse_set.cpp  test_system.cpp  test_system_graph.cpp  test_world.cpp
